--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,10 +19,62 @@
   justify-content: center;
   align-items: center;
   color: rgb(174, 95, 249);
-  margin-top: 70px;
+  margin-top: 80px;
 }
 
 .column {
   display:flex;
   flex-direction: column;
+}
+
+
+.colorrow {
+  background-color: #FAE29C;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.piccolumn {
+  display:flex;
+  flex-direction: column;
+  margin-left: 900px;
+}
+
+.headercontentcolumn{
+  display:flex;
+  flex-direction: column;
+
+  width: 190%;
+
+}
+
+.headerfont {
+  color: rgb(27, 106, 255);
+  font-size: 60px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 500;
+
+}
+
+.contentfont {
+  font-size: 18px;
+  color: rgb(31, 31, 31);
+  
+}
+
+.rightycolumn {
+  display: flex;
+  flex-direction: column;
+  margin-left: -1300px;
+}
+.leftycolumn {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+.spacing {
+  margin-left: 80px;
 }
