--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -45,9 +45,8 @@
 .headercontentcolumn{
   display:flex;
   flex-direction: column;
-
-  width: 190%;
-
+  margin-left: 400px;
+ width: 1000px;
 }
 
 .headerfont {
@@ -55,6 +54,7 @@
   font-size: 60px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
+  width: 100%;
 
 }
 
@@ -290,3 +290,51 @@ text-align:center;
 
 .grow { transition: all .3s ease-in-out; }
 .grow:hover { transform: scale(1.1); }
+
+.hide {
+  display: hidden;
+}
+
+.graphic + .hide {
+  display: block;
+  color: rgb(233, 233, 233);
+  background-color: #888888;
+}
+
+
+
+.conty {
+width: 100%;
+height: 500px;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+box-shadow: #888888;
+margin-top: 350px;
+
+}
+
+.overlay {
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+opacity: 0;
+transition: opacity 0.4s ease-in;
+background: #888888;
+cursor: pointer;
+}
+
+.contenty {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: #F2F2F2;
+text-align: center;
+}
+
+.conty:hover .overlay {
+  opacity: 0.75;
+}
