--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,29 +39,30 @@
 .piccolumn {
   display:flex;
   flex-direction: column;
-  margin-left: 900px;
+  margin-left: 10px;
 }
 
 .headercontentcolumn{
   display:flex;
   flex-direction: column;
-  margin-left: 400px;
- width: 1000px;
+  margin-left: 300px;
+  margin-top: 100px;
 }
 
 .headerfont {
   color: rgb(27, 106, 255);
-  font-size: 60px;
+  font-size: 70px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
-  width: 100%;
+  width: 900px;
+  margin-top: 20px;
 
 }
 
 .contentfont {
-  font-size: 18px;
+  font-size: 26px;
   color: rgb(31, 31, 31);
-  
+  font-weight: 500;
 }
 
 .rightycolumn {
@@ -337,4 +338,9 @@ text-align: center;
 
 .conty:hover .overlay {
   opacity: 0.75;
+}
+
+.contactspace {
+  margin-left: -150px;
+  display: flex;
 }
