--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,6 +11,7 @@
 .row {
   display: flex;
   flex-direction: row;
+
 }
 
 .purpleheader {
@@ -32,20 +33,20 @@
   background-color: #FAE29C;
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 120%;
   margin-bottom: 20px;
 }
 
 .piccolumn {
   display:flex;
   flex-direction: column;
-  margin-left: 10px;
+  margin-left: -100px;
 }
 
 .headercontentcolumn{
   display:flex;
   flex-direction: column;
-  margin-left: 300px;
+  margin-left: 200px;
   margin-top: 100px;
 }
 
@@ -68,7 +69,7 @@
 .rightycolumn {
   display: flex;
   flex-direction: column;
-  margin-left: -1300px;
+  margin-left: -1150px;
 }
 .leftycolumn {
   display: flex;
@@ -77,7 +78,7 @@
 }
 
 .spacing {
-  margin-left: 80px;
+  margin-left: 200px;
 }
 
 
@@ -312,7 +313,7 @@ left: 50%;
 transform: translate(-50%, -50%);
 box-shadow: #888888;
 margin-top: 350px;
-
+padding-left: -300px;
 }
 
 .overlay {
@@ -323,7 +324,7 @@ right: 0;
 bottom: 0;
 opacity: 0;
 transition: opacity 0.4s ease-in;
-background: #888888;
+background: #636363;
 cursor: pointer;
 }
 
@@ -341,6 +342,16 @@ text-align: center;
 }
 
 .contactspace {
-  margin-left: -150px;
+  
   display: flex;
+}
+
+.spacing2 {
+
+  margin-left: 100px;
+}
+
+.spacing3 {
+
+  margin-left: -10px;
 }
