--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,20 +40,20 @@
 .piccolumn {
   display:flex;
   flex-direction: column;
-  margin-left: -270px;
+  margin-left: -290px;
 }
 
 .headercontentcolumn{
   display:flex;
   flex-direction: column;
-  margin-left: 150px;
+  margin-left: 30px;
   margin-top: 100px;
   width: 80%;
 }
 
 .headerfont {
   color: rgb(27, 106, 255);
-  font-size: 70px;
+  font-size: 50px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
   width: 900px;
@@ -62,9 +62,10 @@
 }
 
 .contentfont {
-  font-size: 26px;
+  font-size: 20px;
   color: rgb(31, 31, 31);
   font-weight: 500;
+  width: 700px;
 }
 
 .rightycolumn {
@@ -373,7 +374,7 @@ display: inline-flex;
 }
 
 .headerstatic {
-  font-size: 50px;
+  font-size: 40px;
   color: #636363;
   font-weight: 300;
 }
@@ -388,7 +389,7 @@ line-height: 90px;
 
 .list li{
   list-style: none;
-  font-size: 50px;
+  font-size: 40px;
   color: rgb(0, 140, 255);
   font-weight: 300;
   top: 0;
