--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,7 +19,7 @@
   font-weight: 500;
   justify-content: center;
   align-items: center;
-  color: rgb(174, 95, 249);
+  color:rgb(27, 106, 255);
   margin-top: 80px;
 }
 
@@ -30,23 +30,25 @@
 
 
 .colorrow {
-  background-color: #FAE29C;
+  background-color: #1f1f1f;
   display: flex;
   flex-direction: row;
   width: 120%;
   margin-bottom: 20px;
+  border: 3px solid #31A8FF;
+  margin-top: 80px;
 }
 
 .piccolumn {
   display:flex;
   flex-direction: column;
-  margin-left: -290px;
+  margin-left: -250px;
 }
 
 .headercontentcolumn{
   display:flex;
   flex-direction: column;
-  margin-left: 30px;
+  margin-left: 300px;
   margin-top: 100px;
   width: 80%;
 }
@@ -63,7 +65,7 @@
 
 .contentfont {
   font-size: 20px;
-  color: rgb(31, 31, 31);
+  color: rgb(223, 223, 223);
   font-weight: 500;
   width: 700px;
 }
@@ -415,7 +417,7 @@ line-height: 90px;
   width: 100%;
   border-left:2px solid rgb(0, 140, 255) ;
   animation: typing 2.3s steps(10) infinite;
-  background: #FAE29C ;
+  background: #1f1f1f ;
 }
 
 @keyframes typing {
@@ -430,4 +432,56 @@ line-height: 90px;
 display: flex;
 flex-direction: row;
 padding-top: -2000px;
+}
+
+@media (max-width: 1920px) {
+  .piccolumn {
+  display:flex;
+  flex-direction: column;
+  margin-left: -290px;
+}
+
+.headercontentcolumn{
+  display:flex;
+  flex-direction: column;
+  margin-left: 300px;
+  margin-top: 100px;
+  width: 80%;
+}
+
+}
+
+.Links {
+  font-size: 28px;
+  color: rgb(249, 249, 249);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  align-content: flex-end;
+  opacity: 80%;
+  justify-content: flex-end;
+  margin-left: 90px;
+}
+
+.Links:hover {
+  color: #31A8FF;
+}
+
+.BButton {
+width: 160px;
+height: 40px;
+
+color: rgb(49, 167, 240);
+font-size: 20px;
+margin-top: 20px;
+border-radius: 10px;
+justify-content: center;
+align-items: center;
+background-color: transparent;
+font-size: 17px;
+border: 2px solid #31A8FF;
+
+}
+
+.BButton:hover {
+  background-color:#1152c9;
 }
