--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -490,11 +490,32 @@ border: 2px solid #31A8FF;
 
 }
 
-.BButton:hover {
+.BButton2:hover {
   background-color:#1152c9;
   color: #F2F2F2;
 }
 
+.BButton2 {
+  width: 160px;
+  height: 40px;
+  
+  color: rgb(49, 167, 240);
+  font-size: 20px;
+  margin-top: 20px;
+  margin-left: 10px;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  font-size: 17px;
+  border: 2px solid #31A8FF;
+  
+  }
+  
+  .BButton:hover {
+    background-color:#1152c9;
+    color: #F2F2F2;
+  }
 .textcontent {
   width: 30%;
   color: #f6f6f6;
@@ -524,4 +545,48 @@ border: 2px solid #31A8FF;
 
 .titlecard:hover {
   opacity: 80%;
+}
+
+
+.hb{
+  padding-left: 10px;
+  display: flex;
+}
+.hb2{
+  
+  display: flex;
+}
+
+.about {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.abouttext{
+  font-size: 22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.rightycolumn1 {
+  display: flex;
+  flex-direction: column;
+  
+}
+.leftycolumn1 {
+  display: flex;
+  flex-direction: column;
+  margin-left: -100px;
+}
+
+.videobox{
+  border: 2px solid #31A8FF;
+  width: 1000px;
+  height: 600px;
+  padding-top: -300px;
+  display: flex;
+  justify-content: center;
 }
